--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/no-bugs-life/fec/issues"
   },
-  "homepage": "https://github.com/no-bugs-life/fec#readme"
+  "homepage": "https://github.com/no-bugs-life/fec#readme",
+  "devDependencies": {
+    "@babel/core": "^7.20.12"
+  },
+  "dependencies": {
+    "axios": "^1.2.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jest": "^29.4.0",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
