--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.14.5",
+    "@svgr/webpack": "^6.5.1",
     "@webpack-cli/generators": "^3.0.1",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
+    "svg-url-loader": "^8.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
@@ -38,6 +42,7 @@
     "axios": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "jest": "^29.4.0",
     "mocha": "^10.2.0",
