--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.2.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "jest": "^29.4.0",
     "mocha": "^10.2.0",
