--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "svgo": "^3.0.2"
   }
 }
