--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^1.2.4",
     "cors": "^2.8.5",
+    "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
