--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@cfaester/enzyme-adapter-react-18": "^0.6.0",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@webpack-cli/generators": "^3.0.1",
     "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
@@ -33,6 +36,9 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
+    "jest-cli": "^29.4.2",
+    "jsdom": "21.1.0",
+    "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "^2.6.1",
     "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.1",
@@ -45,8 +51,9 @@
   "dependencies": {
     "axios": "^1.2.4",
     "cors": "^2.8.5",
-    "dateformat": "^5.0.3",
+    "dateformat": "^4.6.3",
     "dotenv": "^16.0.3",
+    "enzyme": "^3.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
