--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@webpack-cli/generators": "^3.0.1",
     "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
@@ -43,12 +46,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@types/testing-library__jest-dom": "^5.14.5",
     "axios": "^1.2.4",
     "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.3",
     "eslint-config-airbnb": "^19.0.4",
     "express": "^4.18.2",
+    "jest-environment-jsdom": "^29.4.2",
     "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
