--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@babel/preset-react": "^7.18.6",
     "@cfaester/enzyme-adapter-react-18": "^0.6.0",
     "@svgr/webpack": "^6.5.1",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@webpack-cli/generators": "^3.0.1",
     "babel-jest": "^29.4.1",
     "babel-loader": "^9.1.2",
@@ -35,9 +38,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
-    "jest-cli": "^29.4.2",
-    "jsdom": "21.1.0",
-    "jsdom-global": "3.0.2",
+    "jest-environment-jsdom": "^29.4.2",
     "mini-css-extract-plugin": "^2.6.1",
     "react-test-renderer": "^18.2.0",
     "style-loader": "^3.3.1",
