--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "axios": "^1.2.4",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dateformat": "^4.6.3",
     "dotenv": "^16.0.3",
